<resources>
    <string name="app_name">EatCalc</string>

    <string name="recipes">Recipes</string>
    <string name="prices">Prices</string>
    <string name="settings">Settings</string>
    <string name="converter">Converter</string>
    <string name="open_recipes_book">Open recipes book</string>
    <string name="open_prices_data_store">Open prices data store</string>
    <string name="open_settings">Open settings</string>
    <string name="open_converter_data_store">Open converter data store</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients">Ingredients</string>
    <string name="count">Count</string>
    <string name="units">Units</string>
    <string name="plus_symbol">+</string>
    <string name="name">Name</string>
    <string name="cooking_method">Cooking method</string>
    <string name="save">Save</string>
    <string name="rub">RUB</string>
    <string name="currency">Currency</string>
    <string name="price">Price</string>
    <string name="title_activity_ingredients_list">Ingredients</string>
    <string name="no_ingredients_here">No ingredients here</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="recipe_type">Recipe type</string>
    <string name="add_recipe">Add recipe</string>
    <string name="no_recipes_here">No recipes here</string>
    <string name="recipe_not_saved">Recipe not saved</string>
    <string name="portions">Portions</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="ingredient_count_default">0</string>
    <string name="edit_recipe_ingredients">Edit Recipe Ingredients</string>
    <string name="for_1">for 1</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="input_number">Input number</string>
    <string name="recipe_has_no_ingredients">Recipe has no ingredients.</string>
    <string name="Ingredient_not_saved_because_it_is_uncompleted">Ingredient not saved because it is uncompleted</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="must_be_positive">Value must be positive</string>
    <string name="must_be_non_negative">Value must be non negative</string>
    <string name="to_edit">Edit</string>
    <string name="cook">Cook</string>
</resources>