<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/portions_num"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/portions"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/recipe_price"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/recipe_currency"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:text="@string/for_1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/recipe_ingredient_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cooking_method" />

        <TextView
            android:id="@+id/cooking_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>