<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:baselineAligned="false">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_recipe_ingredient_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_recipe_ingredient_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_recipe_ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>