<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/recipes"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/open_recipes_book"
        android:gravity="center|start"
        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text_lines"
        android:text='@string/recipes'
        android:textSize="40sp"
        app:drawableStartCompat="@drawable/recipes" />

    <TextView
        android:id="@+id/prices"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center|start"
        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text_lines"
        android:textSize="40sp"
        android:text='@string/ingredients'
        android:contentDescription="@string/open_prices_data_store"
        app:drawableStartCompat="@drawable/prices" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center|start"
        android:drawablePadding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text_lines"
        android:textSize="40sp"
        android:text='@string/settings'
        android:contentDescription="@string/open_settings"
        app:drawableStartCompat="@drawable/settings" />

    <TextView
        android:id="@+id/converter"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center|start"
        android:drawablePadding="15dp"
        android:paddingStart="18dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text_lines"
        android:textSize="40sp"
        android:text='@string/converter'
        android:contentDescription="@string/open_converter_data_store"
        app:drawableStartCompat="@drawable/scale" />

</LinearLayout>