<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_portions_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/portions" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="24sp"
                android:layout_weight="9"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_recipe_ingredient"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:focusable="true"
                android:clickable="true"
                android:tint="#A9EF78"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_input_add"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/recipe_ingredients_list_item" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cooking_method" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_recipe_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>